# bones

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
app/: CMakeLists.txt  main.cpp  main.h
app/resources/shaders/: color.fs  color.vs  hello_triangle.fs  hello_triangle.vs  transform.fs
bones/: CMakeLists.txt  bones.h  engine.cpp  engine.h
bones/core/: typedefs.h
bones/core/debug/: assert.h  log.cpp  log.h  profiler.cpp  profiler.h
bones/core/events/: event.h  event_handler.cpp  event_handler.h
bones/core/input/: gamepad.h  input_handler.cpp  input_handler.h  keyboard.h  mouse.h
bones/core/math/: math.h
bones/core/math/color/: color.cpp  color.h  color_defs.cpp
bones/core/math/geometry/: circle.h  prism.h
bones/core/math/random/: perlin.h  random.h
bones/core/math/spatial/: mat.h  point2.cpp  point2.h  quat.h  rect.cpp  rect.h  vec.h
bones/core/string/: str.h
bones/core/time/: time.cpp  time.h  update_loop.cpp  update_loop.h
bones/editor/: editor.h  editor_imgui_sdl.cpp  editor_imgui_sdl.h
bones/platform/: gl.cpp.unused  gl.h.unused  platform.h  platform_sdl.cpp  window.h  window_sdl.cpp  window_sdl.h
bones/resources/: image.cpp  image.h  shader.cpp  shader.h  texture.cpp  texture.h
bones/scene/: camera.cpp  camera.h  node.cpp  node.h
cmake/: configure_submodules.cmake  target_configure_files.cmake
docs/: architecture.md
docs/todo/: audio.md  core.md  graphics.md  misc.md  scene.md
scripts/: shadercross_install.py
src/: CMakeLists.txt
src/bones/backend/: backend_sdl.cpp  backend_sdl.h
tests/: CMakeLists.txt  test_random.cpp
